--- a/themes/smigle/layouts/partials/header.html
+++ b/themes/smigle/layouts/partials/header.html
@@ -8,7 +8,7 @@
     </a>
     <div class="text">
       <a href="{{ .Site.BaseURL }}"><h1>{{ .Site.Title }}</h1></a>
-      <h3>{{ default "KM" .Site.Params.subtitle }}</h3>
+      <h3>{{ default "Many a little makes a mackle" .Site.Params.subtitle }}</h3>
     </div>
   </div>
   <nav>
