--- a/themes/smigle/layouts/partials/head.html
+++ b/themes/smigle/layouts/partials/head.html
@@ -5,6 +5,12 @@
     name="description"
     content="{{ .Site.Params.description }}"
   />
+  <!-- layouts/partials/head.html -->
+  <script type="module">
+	import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+	mermaid.initialize({ startOnLoad: true });
+  </script>
+
   {{ if (eq .Title .Site.Title) }}
     {{ with $title := .Title }}
       <title>{{ . }}</title>
